<resources>
    <string name="app_name">myBubble</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_gps">GPS</string>


    <string name="big_brain_aws">1sjvZQe8ls3K7bB0vooZI33xJdqjwQ195jC7apiv</string>

    <string name="symptoms">
        The symptoms of COVID-19 are similar to common illnesses such as a cold or influenza. You may have one or more of the following:
        \n
        \n- a new or worsening cough
        \n- fever (at least 38˚C)
        \n- shortness of breath
        \n- a sore throat
        \n- sneezing and runny nose
        \n- temporary loss of smell
        \n
        \nShortness of breath is a sign of possible pneumonia and requires immediate medical attention.\n
        \nSome people may present with less typical symptoms such as only: fever, diarrhoea, headache, myalgia (muscle pain), nausea/vomiting, or confusion/irritability.\n
        \nSymptoms can take up to 14 days to show after a person has been infected. The virus can be passed onto others before they know they have it – from up to two days before symptoms develop.\n
        \nIf you have these symptoms call Healthline (for free) on 0800 358 5453 or your doctor immediately.
    </string>

    <string name="howItWorks">The <b>myBubble</b> app generates a unique, anonymous ID number for every installation.
        When communicating with <b>myBubble\'s</b> Cloud Service, only the ID number and a timestamp are transmitted.
        \n
        \nThe <b>myBubble</b> app collects GPS location data solely for the purpose of generating your personal timeline.
        No location data is transmitted to or stored by <b>myBubble\'s</b> Cloud Service.
    </string>

    <string name="servicesExpl"><b>myBubble</b> utilise three key components of your smartphone to conduct effective contact tracing.
        \n
        \n1: <b>Bluetooth</b> is used to record encounters with other smartphone devices with this app
        installed <i>they <b>must</b> have the app running with <b>Bluetooth</b> enabled as well.</i>
        Should one user not have <b>Bluetooth</b> enabled then the system breaks down.
        \n
        \n2: <b>Location Services</b> are used to keep a record of where you have been locally. Note
        this data is only ever stored locally and is for your personal use so that you do not have to manually
        log where you have been.
        \n
        \n3: <b>WIFI/Internet</b>, should you ever come into close contact with someone else using the app
        that encounter is recorded. Should any of those encounters be confirmed as a COVID case then
        you will need <b>Internet</b> access to receive a notification informing you.
    </string>

    <string name="tap_here_for_more_info"><u>Tap here for more information</u></string>

    <string name="notefragment_your_status">Your current status</string>
    <string name="notefragment_your_bubble_id">Your bubble ID</string>
    <string name="notefragment_status_healthy">Healthy</string>
    <string name="notefragment_status_infectious">Infectious</string>
    <string name="notefragment_status_healthy_detail">Please remember to wear a mask and practice social distancing to keep yourself and your bubble safe.\n\nIf there are IDs in your Infected Encounters list please consider getting a test.</string>
    <string name="notefragment_status_infectious_detail">If you are infectious, please stay isolated and quarantine yourself for at least two weeks to prevent the spread and protect those around you.</string>
    <string name="note_fragment_confirm_expo">Confirm Exposure</string>
    <string name="note_fragment_revert_expo">Revert Exposure</string>

    <string name="tap_to_expand">Tap here to expand</string>

    <string name="next_steps">This is not a confirmation that you have COVID-19. We strongly
        recommend you contact HealthLine and inform them that you may be a casual contact or possibly
        even a close contact.\n\nWe also recommend monitoring yourself for the following symptoms\n
        \n- a new or worsening cough
        \n- fever (at least 38˚C)
        \n- shortness of breath
        \n- a sore throat
        \n- sneezing and runny nose
        \n- temporary loss of smell</string>
</resources>