<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.notifications.NotificationsFragment">


        <com.google.android.material.card.MaterialCardView
        android:id="@id/cardStatus"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/motorwayGreen"
        app:cardCornerRadius="30dp"
        app:cardElevation="@dimen/elevation"
        app:contentPadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:strokeColor="@color/primaryTextColor"
        app:strokeWidth="1dp">

        <TextView
            android:id="@+id/txtViewStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notefragment_status_healthy"
            android:textAlignment="center"
            android:textSize="30sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@id/cardStatusDetail"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="30dp"
            app:cardElevation="@dimen/elevation"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardStatus"
            app:strokeColor="@color/primaryTextColor"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/txtViewStatusDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notefragment_status_healthy_detail"
                android:textAlignment="center"
                android:textSize="18sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardExposure"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/red"
            app:cardCornerRadius="30dp"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardStatusDetail"
            app:strokeColor="@color/primaryTextColor"
            app:strokeWidth="1dp">

            <LinearLayout
                android:id="@+id/linearlayoutH"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearlayoutV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/txtExposure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/note_fragment_confirm_expo"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardIDValue"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="30dp"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:strokeColor="@color/primaryTextColor"
            app:strokeWidth="1dp">

            <LinearLayout
                android:id="@+id/linearlayoutH1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearlayoutV1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/txtIDValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/infectedDBSize"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardExposure"
            app:strokeColor="@color/primaryTextColor"
            app:strokeWidth="1dp">

            <LinearLayout
                android:id="@+id/linearlayoutH2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearlayoutV2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/txtInfectedDBValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30sp"
                        tools:text="Update Database" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/notefragment_your_status"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/notefragment_your_bubble_id"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infectedDBSize" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>